// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Adaptative main 1`] = `
<div
  className="adaptative"
>
  <div
    className="adaptative__item"
  >
    Proposal 1
  </div>
  <div
    className="adaptative__item"
  >
    Proposal 2
  </div>
  <div
    className="adaptative__item"
  >
    Proposal 3
  </div>
  <div
    className="adaptative__item"
  >
    Proposal 4
  </div>
</div>
`;

exports[`Storyshots AsyncLoader error 1`] = `
<div
  className="spinner"
>
  <div
    className="spinner__bounce"
  />
  <div
    className="spinner__bounce"
  />
  <div
    className="spinner__bounce"
  />
</div>
`;

exports[`Storyshots AsyncLoader success 1`] = `
<div
  className="spinner"
>
  <div
    className="spinner__bounce"
  />
  <div
    className="spinner__bounce"
  />
  <div
    className="spinner__bounce"
  />
</div>
`;

exports[`Storyshots Card Carte avec bordures arrondies 1`] = `
<div
  className="card card--has-rounded-border card--has-border card--layer-flat "
>
  <p>
    Voici une jolie petite carte.
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau base 1`] = `
<div
  className="card card--has-border card--layer-base "
>
  <p>
    Carte de niveau 
    <b>
      base
    </b>
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau base sans bordure 1`] = `
<div
  className="card card--layer-base "
>
  <p>
    Carte de niveau 
    <b>
      base
    </b>
     sans borbure
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau flat 1`] = `
<div
  className="card card--has-border card--layer-flat "
>
  <p>
    Carte de niveau 
    <b>
      flat
    </b>
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau flat sans bordure 1`] = `
<div
  className="card card--layer-flat "
>
  <p>
    Carte de niveau 
    <b>
      flat
    </b>
     sans borbure
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau overlay 1`] = `
<div
  className="card card--has-border card--layer-overlay "
>
  <p>
    Carte de niveau 
    <b>
      overlay
    </b>
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau overlay sans bordure 1`] = `
<div
  className="card card--layer-overlay "
>
  <p>
    Carte de niveau 
    <b>
      overlay
    </b>
     sans borbure
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau pop-out 1`] = `
<div
  className="card card--has-border card--layer-pop-out "
>
  <p>
    Carte de niveau 
    <b>
      pop-out
    </b>
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau pop-out sans bordure 1`] = `
<div
  className="card card--layer-pop-out "
>
  <p>
    Carte de niveau 
    <b>
      pop-out
    </b>
     sans borbure
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau raised 1`] = `
<div
  className="card card--has-border card--layer-raised "
>
  <p>
    Carte de niveau 
    <b>
      raised
    </b>
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau raised sans bordure 1`] = `
<div
  className="card card--layer-raised "
>
  <p>
    Carte de niveau 
    <b>
      raised
    </b>
     sans borbure
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau sticky-nav 1`] = `
<div
  className="card card--has-border card--layer-sticky-nav "
>
  <p>
    Carte de niveau 
    <b>
      sticky-nav
    </b>
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau sticky-nav sans bordure 1`] = `
<div
  className="card card--layer-sticky-nav "
>
  <p>
    Carte de niveau 
    <b>
      sticky-nav
    </b>
     sans borbure
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau temp-nav 1`] = `
<div
  className="card card--has-border card--layer-temp-nav "
>
  <p>
    Carte de niveau 
    <b>
      temp-nav
    </b>
  </p>
</div>
`;

exports[`Storyshots Card Carte de niveau temp-nav sans bordure 1`] = `
<div
  className="card card--layer-temp-nav "
>
  <p>
    Carte de niveau 
    <b>
      temp-nav
    </b>
     sans borbure
  </p>
</div>
`;

exports[`Storyshots Card Carte simple 1`] = `
<div
  className="card card--has-border "
>
  <p>
    Voici une jolie petite carte.
  </p>
</div>
`;

exports[`Storyshots CreditCardForm main 1`] = `
<form>
  <fieldset>
    <legend>
      Carte de paiement
    </legend>
    <div>
      <label>
        Numéro de carte
        <input
          autoComplete="cc-number"
          inputMode="numeric"
          maxLength={19}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Code de sécurité
        <input
          autoComplete="cc-csc"
          inputMode="numeric"
          maxLength={4}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Date d'expiration
        <input
          autoComplete="cc-exp-month"
          inputMode="numeric"
          placeholder="MM"
          type="text"
        />
        <input
          autoComplete="cc-exp-year"
          inputMode="numeric"
          placeholder="AA"
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Prénom
        <input
          autoComplete="cc-given-name"
          spellCheck={false}
          type="text"
        />
      </label>
      <label>
        Nom
        <input
          autoComplete="cc-family-name"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
  </fieldset>
  <fieldset>
    <legend>
      Livraison
    </legend>
    <div>
      <label>
        Prénom
        <input
          autoComplete="shipping given-name"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Nom
        <input
          autoComplete="shipping family-name"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Adresse (ligne 1)
        <input
          autoComplete="shipping address-line1"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Adresse (ligne 2)
        <input
          autoComplete="shipping address-line2"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Code postal
        <input
          autoComplete="shipping postal-code"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Ville
        <input
          autoComplete="shipping address-level2"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
  </fieldset>
  <fieldset>
    <legend>
      Facturation
    </legend>
    <div>
      <label>
        Prénom
        <input
          autoComplete="billing given-name"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Nom
        <input
          autoComplete="billing family-name"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Adresse (ligne 1)
        <input
          autoComplete="billing address-line1"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Adresse (ligne 2)
        <input
          autoComplete="billing address-line2"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Code postal
        <input
          autoComplete="billing postal-code"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
    <div>
      <label>
        Ville
        <input
          autoComplete="billing address-level2"
          spellCheck={false}
          type="text"
        />
      </label>
    </div>
  </fieldset>
</form>
`;

exports[`Storyshots DebouncedInput with a debounced value 1`] = `
<input
  onChange={[Function]}
/>
`;

exports[`Storyshots Encryption test 1`] = `
<div
  style={
    Object {
      "color": "red",
      "fontSize": "3em",
      "fontWeight": "bold",
    }
  }
>
  Please look at your console
</div>
`;

exports[`Storyshots Forms / Button Taille large 1`] = `
<button
  className="button button--size-large "
  onClick={[Function]}
>
  Mon bouton
</button>
`;

exports[`Storyshots Forms / Button Taille normal 1`] = `
<button
  className="button button--size-normal "
  onClick={[Function]}
>
  Mon bouton
</button>
`;

exports[`Storyshots Forms / Button Taille small 1`] = `
<button
  className="button button--size-small "
  onClick={[Function]}
>
  Mon bouton
</button>
`;

exports[`Storyshots Forms / Button disabled 1`] = `
<button
  className="button button--size-normal "
  disabled={true}
  onClick={[Function]}
>
  Mon bouton
</button>
`;

exports[`Storyshots Forms / Button main 1`] = `
<button
  className="button button--size-normal "
  onClick={[Function]}
>
  Mon bouton
</button>
`;

exports[`Storyshots Forms / Button show disabled 1`] = `
<button
  className="button button--disabled button--size-normal "
  onClick={[Function]}
>
  Mon bouton
</button>
`;

exports[`Storyshots Forms / DateInput disabled 1`] = `
<fieldset
  className="form-date-input form-date-input--disabled "
>
  <input
    autoComplete="bday-day"
    className="form-date-input__input form-date-input__input_day"
    disabled={true}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="JJ"
    readOnly={false}
    type="text"
    value="13"
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-month"
    className="form-date-input__input form-date-input__input_month"
    disabled={true}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="MM"
    readOnly={false}
    type="text"
    value="02"
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-year"
    className="form-date-input__input form-date-input__input_year"
    disabled={true}
    inputMode="numeric"
    maxLength={4}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="AAAA"
    readOnly={false}
    type="text"
    value="1990"
  />
</fieldset>
`;

exports[`Storyshots Forms / DateInput dynamic 1`] = `
<fieldset
  className="form-date-input "
>
  <input
    autoComplete="bday-day"
    className="form-date-input__input form-date-input__input_day"
    disabled={false}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="JJ"
    readOnly={false}
    type="text"
    value=""
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-month"
    className="form-date-input__input form-date-input__input_month"
    disabled={false}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="MM"
    readOnly={false}
    type="text"
    value=""
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-year"
    className="form-date-input__input form-date-input__input_year"
    disabled={false}
    inputMode="numeric"
    maxLength={4}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="AAAA"
    readOnly={false}
    type="text"
    value=""
  />
</fieldset>
`;

exports[`Storyshots Forms / DateInput error 1`] = `
<fieldset
  className="form-date-input form-date-input--error "
>
  <input
    autoComplete="bday-day"
    className="form-date-input__input form-date-input__input_day"
    disabled={false}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="JJ"
    readOnly={false}
    type="text"
    value="13"
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-month"
    className="form-date-input__input form-date-input__input_month"
    disabled={false}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="MM"
    readOnly={false}
    type="text"
    value="02"
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-year"
    className="form-date-input__input form-date-input__input_year"
    disabled={false}
    inputMode="numeric"
    maxLength={4}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="AAAA"
    readOnly={false}
    type="text"
    value="1990"
  />
</fieldset>
`;

exports[`Storyshots Forms / DateInput main 1`] = `
<fieldset
  className="form-date-input "
>
  <input
    autoComplete="bday-day"
    className="form-date-input__input form-date-input__input_day"
    disabled={false}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="JJ"
    readOnly={false}
    type="text"
    value=""
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-month"
    className="form-date-input__input form-date-input__input_month"
    disabled={false}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="MM"
    readOnly={false}
    type="text"
    value=""
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-year"
    className="form-date-input__input form-date-input__input_year"
    disabled={false}
    inputMode="numeric"
    maxLength={4}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="AAAA"
    readOnly={false}
    type="text"
    value=""
  />
</fieldset>
`;

exports[`Storyshots Forms / DateInput read-only 1`] = `
<fieldset
  className="form-date-input form-date-input--read-only "
>
  <input
    autoComplete="bday-day"
    className="form-date-input__input form-date-input__input_day"
    disabled={false}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="JJ"
    readOnly={true}
    type="text"
    value="13"
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-month"
    className="form-date-input__input form-date-input__input_month"
    disabled={false}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="MM"
    readOnly={true}
    type="text"
    value="02"
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-year"
    className="form-date-input__input form-date-input__input_year"
    disabled={false}
    inputMode="numeric"
    maxLength={4}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="AAAA"
    readOnly={true}
    type="text"
    value="1990"
  />
</fieldset>
`;

exports[`Storyshots Forms / DateInput with value 1`] = `
<fieldset
  className="form-date-input "
>
  <input
    autoComplete="bday-day"
    className="form-date-input__input form-date-input__input_day"
    disabled={false}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="JJ"
    readOnly={false}
    type="text"
    value="13"
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-month"
    className="form-date-input__input form-date-input__input_month"
    disabled={false}
    inputMode="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="MM"
    readOnly={false}
    type="text"
    value="02"
  />
  <span
    className="form-date-input__input-separator"
  >
    /
  </span>
  <input
    autoComplete="bday-year"
    className="form-date-input__input form-date-input__input_year"
    disabled={false}
    inputMode="numeric"
    maxLength={4}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="AAAA"
    readOnly={false}
    type="text"
    value="1990"
  />
</fieldset>
`;

exports[`Storyshots Forms / FieldContainer Avec aide 1`] = `
<div
  className="form-field-container"
>
  <label
    className="form-field-container__label"
    htmlFor="form-field-2"
  >
    Example
  </label>
  <div
    className="form-field-container__field"
  >
    <input
      className="form-input-field"
      id="form-field-2"
      placeholder="Valeur d'exemple"
      type="text"
    />
  </div>
  <p
    className="form-field-container__help"
  >
    Un peu d'aide, ça ne fait pas de mal
  </p>
</div>
`;

exports[`Storyshots Forms / FieldContainer Avec erreur 1`] = `
<div
  className="form-field-container"
>
  <label
    className="form-field-container__label"
    htmlFor="form-field-1"
  >
    Example
  </label>
  <div
    className="form-field-container__field"
  >
    <input
      className="form-input-field form-input-field--error"
      id="form-field-1"
      placeholder="Valeur d'exemple"
      type="text"
    />
  </div>
  <p
    className="form-field-container__error"
  >
    Nom inconnu
  </p>
</div>
`;

exports[`Storyshots Forms / FieldContainer Avec erreur et aide 1`] = `
<div
  className="form-field-container"
>
  <label
    className="form-field-container__label"
    htmlFor="form-field-3"
  >
    Example
  </label>
  <div
    className="form-field-container__field"
  >
    <input
      className="form-input-field form-input-field--error"
      id="form-field-3"
      placeholder="Valeur d'exemple"
      type="text"
    />
  </div>
  <p
    className="form-field-container__error"
  >
    Données invalides
  </p>
</div>
`;

exports[`Storyshots Forms / FieldContainer main 1`] = `
<div
  className="form-field-container"
>
  <label
    className="form-field-container__label"
    htmlFor="form-field-0"
  >
    Example
  </label>
  <div
    className="form-field-container__field"
  >
    <input
      className="form-input-field"
      id="form-field-0"
      placeholder="Valeur d'exemple"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Forms / InputField Avec erreur 1`] = `
<input
  className="form-input-field form-input-field--error"
  defaultValue=""
  type="text"
/>
`;

exports[`Storyshots Forms / InputField Avec placeholder 1`] = `
<input
  className="form-input-field"
  defaultValue=""
  placeholder="Example"
  type="text"
/>
`;

exports[`Storyshots Forms / InputField Avec valeur 1`] = `
<input
  className="form-input-field"
  defaultValue="Example"
  type="text"
/>
`;

exports[`Storyshots Forms / InputField Désactivé 1`] = `
<input
  className="form-input-field"
  defaultValue="Example"
  disabled={true}
  type="text"
/>
`;

exports[`Storyshots Forms / InputField Lecture seule 1`] = `
<input
  className="form-input-field"
  defaultValue="Example"
  readOnly={true}
  type="text"
/>
`;

exports[`Storyshots Forms / InputField main 1`] = `
<input
  className="form-input-field"
  defaultValue=""
  type="text"
/>
`;

exports[`Storyshots Forms / ProgressButton disabled 1`] = `
<button
  className="button button--size-normal progress-button "
  disabled={true}
>
  <div
    className="progress-button__content"
  >
    Payer
  </div>
  <div
    className="progress-button__progress-bar"
  />
</button>
`;

exports[`Storyshots Forms / ProgressButton finished 1`] = `
<button
  className="button button--size-normal progress-button "
  disabled={true}
>
  <div
    className="progress-button__content"
  >
    Payer
  </div>
  <div
    className="progress-button__progress-bar progress-button__progress-bar--finished"
  />
</button>
`;

exports[`Storyshots Forms / ProgressButton loading 1`] = `
<button
  className="button button--size-normal progress-button "
  disabled={true}
>
  <div
    className="progress-button__content"
  >
    Payer
  </div>
  <div
    className="progress-button__progress-bar progress-button__progress-bar--loading"
  />
</button>
`;

exports[`Storyshots Forms / ProgressButton main 1`] = `
<button
  className="button button--size-normal progress-button "
  disabled={false}
  onClick={[Function]}
>
  <div
    className="progress-button__content"
  >
    Payer
  </div>
  <div
    className="progress-button__progress-bar"
  />
</button>
`;

exports[`Storyshots LoaderDemo main 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Load one
  </button>
  <button
    onClick={[Function]}
  >
    Load parallel
  </button>
  <button
    onClick={[Function]}
  >
    Load sequential
  </button>
  <button
    onClick={[Function]}
  >
    Load on, no indicator
  </button>
</div>
`;

exports[`Storyshots MyButton with icon 1`] = `
<button
  onClick={[Function]}
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-coffee fa-w-20 "
    data-icon="coffee"
    data-prefix="fas"
    role="img"
    style={Object {}}
    viewBox="0 0 640 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
   
  <b>
    Un café ?
  </b>
</button>
`;

exports[`Storyshots MyButton with simple label 1`] = `
<button
  onClick={[Function]}
>
  <b>
    C'est mon label de bouton
  </b>
</button>
`;

exports[`Storyshots Overlay main 1`] = `null`;

exports[`Storyshots Payment / OrderEditor Avec un code promo 1`] = `
<section
  className="order-editor"
>
  <section
    className="card card--has-border card--layer-raised order-summary"
  >
    <ul
      className="order-summary__details"
    >
      <li
        className="order-summary__item"
      >
        <span
          className="order-summary__item-label"
        >
          Vos billets
        </span>
        <span
          className="price order-summary__item-price"
        >
          <span
            className="price__units"
          >
            109
          </span>
          <span
            className="price__remaining"
          >
            , 
            80
             
            €
          </span>
        </span>
      </li>
      <li
        className="order-summary__item"
      >
        <span
          className="order-summary__item-label"
        >
          Code promotion 
          <b>
            RADIN
          </b>
           appliqué
          <a
            className="order-summary__item-cancel"
            href="#"
            onClick={[Function]}
          >
            Supprimer
          </a>
        </span>
        <span
          className="price order-summary__item-price"
        >
          <span
            className="price__units"
          >
            -2
          </span>
          <span
            className="price__remaining"
          >
            , 
            00
             
            €
          </span>
        </span>
      </li>
      <li
        className="order-summary__item"
      >
        <span
          className="order-summary__item-label"
        >
          Vos assurances
        </span>
        <span
          className="price order-summary__item-price"
        >
          <span
            className="price__units"
          >
            5
          </span>
          <span
            className="price__remaining"
          >
            , 
            90
             
            €
          </span>
        </span>
      </li>
    </ul>
    <div
      className="order-summary__separator"
    />
    <p
      className="order-summary__total"
    >
      <span
        className="order-summary__total-label"
      >
        Total de votre commande
      </span>
      <span
        className="price order-summary__total-price"
      >
        <span
          className="price__units"
        >
          113
        </span>
        <span
          className="price__remaining"
        >
          , 
          70
           
          €
        </span>
      </span>
    </p>
  </section>
  <section
    className="card card--has-border card--layer-flat donation order-editor__donation"
  >
    <button
      className="flat-button donation__add-button"
      onClick={[Function]}
    >
      Voulez-vous ajouter un don ?
    </button>
  </section>
</section>
`;

exports[`Storyshots Payment / OrderEditor Avec un don 1`] = `
<section
  className="order-editor"
>
  <section
    className="card card--has-border card--layer-raised order-summary"
  >
    <ul
      className="order-summary__details"
    >
      <li
        className="order-summary__item"
      >
        <span
          className="order-summary__item-label"
        >
          Vos billets
        </span>
        <span
          className="price order-summary__item-price"
        >
          <span
            className="price__units"
          >
            109
          </span>
          <span
            className="price__remaining"
          >
            , 
            80
             
            €
          </span>
        </span>
      </li>
      <li
        className="order-summary__item"
      >
        <span
          className="order-summary__item-label"
        >
          Votre don pour 
          <b>
            Médecins sans frontières
          </b>
          <a
            className="order-summary__item-cancel"
            href="#"
            onClick={[Function]}
          >
            Supprimer
          </a>
        </span>
        <span
          className="price order-summary__item-price"
        >
          <span
            className="price__units"
          >
            1
          </span>
          <span
            className="price__remaining"
          >
            , 
            00
             
            €
          </span>
        </span>
      </li>
    </ul>
    <div
      className="order-summary__separator"
    />
    <p
      className="order-summary__total"
    >
      <span
        className="order-summary__total-label"
      >
        Total de votre commande
      </span>
      <span
        className="price order-summary__total-price"
      >
        <span
          className="price__units"
        >
          110
        </span>
        <span
          className="price__remaining"
        >
          , 
          80
           
          €
        </span>
      </span>
    </p>
  </section>
  <section
    className="card card--has-border card--layer-flat voucher-container order-editor__voucher-form"
  >
    <button
      className="flat-button voucher-container__question"
      onClick={[Function]}
    >
      Avez-vous un code promo ?
    </button>
  </section>
  <section
    className="card card--has-border card--layer-flat donation order-editor__donation"
  >
    <div
      className="donation__selection"
    >
      <p
        className="donation__selection-thanks"
      >
        Vous avez choisi de faire un don à 
        <b>
          Médecins sans frontières
        </b>
        . Nous vous en remercions !
      </p>
      <p
        className="donation__selection-cancel"
      >
        <button
          className="button button--size-small "
          onClick={[Function]}
        >
          Annuler mon don
        </button>
      </p>
    </div>
  </section>
</section>
`;

exports[`Storyshots Payment / OrderEditor Billets & assurances 1`] = `
<section
  className="order-editor"
>
  <section
    className="card card--has-border card--layer-raised order-summary"
  >
    <ul
      className="order-summary__details"
    >
      <li
        className="order-summary__item"
      >
        <span
          className="order-summary__item-label"
        >
          Vos billets
        </span>
        <span
          className="price order-summary__item-price"
        >
          <span
            className="price__units"
          >
            109
          </span>
          <span
            className="price__remaining"
          >
            , 
            80
             
            €
          </span>
        </span>
      </li>
      <li
        className="order-summary__item"
      >
        <span
          className="order-summary__item-label"
        >
          Vos assurances
        </span>
        <span
          className="price order-summary__item-price"
        >
          <span
            className="price__units"
          >
            5
          </span>
          <span
            className="price__remaining"
          >
            , 
            90
             
            €
          </span>
        </span>
      </li>
    </ul>
    <div
      className="order-summary__separator"
    />
    <p
      className="order-summary__total"
    >
      <span
        className="order-summary__total-label"
      >
        Total de votre commande
      </span>
      <span
        className="price order-summary__total-price"
      >
        <span
          className="price__units"
        >
          115
        </span>
        <span
          className="price__remaining"
        >
          , 
          70
           
          €
        </span>
      </span>
    </p>
  </section>
  <section
    className="card card--has-border card--layer-flat voucher-container order-editor__voucher-form"
  >
    <button
      className="flat-button voucher-container__question"
      onClick={[Function]}
    >
      Avez-vous un code promo ?
    </button>
  </section>
  <section
    className="card card--has-border card--layer-flat donation order-editor__donation"
  >
    <button
      className="flat-button donation__add-button"
      onClick={[Function]}
    >
      Voulez-vous ajouter un don ?
    </button>
  </section>
</section>
`;

exports[`Storyshots Payment / OrderEditor Billets uniquement 1`] = `
<section
  className="order-editor"
>
  <section
    className="card card--has-border card--layer-raised order-summary"
  >
    <p
      className="order-summary__total"
    >
      <span
        className="order-summary__total-label"
      >
        Total de votre commande
      </span>
      <span
        className="price order-summary__total-price"
      >
        <span
          className="price__units"
        >
          109
        </span>
        <span
          className="price__remaining"
        >
          , 
          80
           
          €
        </span>
      </span>
    </p>
  </section>
  <section
    className="card card--has-border card--layer-flat voucher-container order-editor__voucher-form"
  >
    <button
      className="flat-button voucher-container__question"
      onClick={[Function]}
    >
      Avez-vous un code promo ?
    </button>
  </section>
  <section
    className="card card--has-border card--layer-flat donation order-editor__donation"
  >
    <button
      className="flat-button donation__add-button"
      onClick={[Function]}
    >
      Voulez-vous ajouter un don ?
    </button>
  </section>
</section>
`;

exports[`Storyshots Payment / OrderSummary Avec un code promo 1`] = `
<section
  className="card card--has-border card--layer-raised order-summary"
>
  <ul
    className="order-summary__details"
  >
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Vos billets
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          109
        </span>
        <span
          className="price__remaining"
        >
          , 
          80
           
          €
        </span>
      </span>
    </li>
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Votre code promotion
        <a
          className="order-summary__item-cancel"
          href="#"
          onClick={[Function]}
        >
          Supprimer
        </a>
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          -2
        </span>
        <span
          className="price__remaining"
        >
          , 
          00
           
          €
        </span>
      </span>
    </li>
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Vos assurances
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          5
        </span>
        <span
          className="price__remaining"
        >
          , 
          90
           
          €
        </span>
      </span>
    </li>
  </ul>
  <div
    className="order-summary__separator"
  />
  <p
    className="order-summary__total"
  >
    <span
      className="order-summary__total-label"
    >
      Total de votre commande
    </span>
    <span
      className="price order-summary__total-price"
    >
      <span
        className="price__units"
      >
        113
      </span>
      <span
        className="price__remaining"
      >
        , 
        70
         
        €
      </span>
    </span>
  </p>
</section>
`;

exports[`Storyshots Payment / OrderSummary Avec un don 1`] = `
<section
  className="card card--has-border card--layer-raised order-summary"
>
  <ul
    className="order-summary__details"
  >
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Vos billets
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          109
        </span>
        <span
          className="price__remaining"
        >
          , 
          80
           
          €
        </span>
      </span>
    </li>
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Votre don
        <a
          className="order-summary__item-cancel"
          href="#"
          onClick={[Function]}
        >
          Supprimer
        </a>
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          1
        </span>
        <span
          className="price__remaining"
        >
          , 
          00
           
          €
        </span>
      </span>
    </li>
  </ul>
  <div
    className="order-summary__separator"
  />
  <p
    className="order-summary__total"
  >
    <span
      className="order-summary__total-label"
    >
      Total de votre commande
    </span>
    <span
      className="price order-summary__total-price"
    >
      <span
        className="price__units"
      >
        110
      </span>
      <span
        className="price__remaining"
      >
        , 
        80
         
        €
      </span>
    </span>
  </p>
</section>
`;

exports[`Storyshots Payment / OrderSummary Billets & assurances 1`] = `
<section
  className="card card--has-border card--layer-raised order-summary"
>
  <ul
    className="order-summary__details"
  >
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Vos billets
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          109
        </span>
        <span
          className="price__remaining"
        >
          , 
          80
           
          €
        </span>
      </span>
    </li>
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Vos assurances
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          5
        </span>
        <span
          className="price__remaining"
        >
          , 
          90
           
          €
        </span>
      </span>
    </li>
  </ul>
  <div
    className="order-summary__separator"
  />
  <p
    className="order-summary__total"
  >
    <span
      className="order-summary__total-label"
    >
      Total de votre commande
    </span>
    <span
      className="price order-summary__total-price"
    >
      <span
        className="price__units"
      >
        115
      </span>
      <span
        className="price__remaining"
      >
        , 
        70
         
        €
      </span>
    </span>
  </p>
</section>
`;

exports[`Storyshots Payment / OrderSummary Billets uniquement 1`] = `
<section
  className="card card--has-border card--layer-raised order-summary"
>
  <p
    className="order-summary__total"
  >
    <span
      className="order-summary__total-label"
    >
      Total de votre commande
    </span>
    <span
      className="price order-summary__total-price"
    >
      <span
        className="price__units"
      >
        109
      </span>
      <span
        className="price__remaining"
      >
        , 
        80
         
        €
      </span>
    </span>
  </p>
</section>
`;

exports[`Storyshots Payment / OrderSummary Tous les types 1`] = `
<section
  className="card card--has-border card--layer-raised order-summary"
>
  <ul
    className="order-summary__details"
  >
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Vos billets
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          109
        </span>
        <span
          className="price__remaining"
        >
          , 
          80
           
          €
        </span>
      </span>
    </li>
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Votre code promotion
        <a
          className="order-summary__item-cancel"
          href="#"
          onClick={[Function]}
        >
          Supprimer
        </a>
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          -2
        </span>
        <span
          className="price__remaining"
        >
          , 
          00
           
          €
        </span>
      </span>
    </li>
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Vos assurances
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          5
        </span>
        <span
          className="price__remaining"
        >
          , 
          90
           
          €
        </span>
      </span>
    </li>
    <li
      className="order-summary__item"
    >
      <span
        className="order-summary__item-label"
      >
        Votre don
        <a
          className="order-summary__item-cancel"
          href="#"
          onClick={[Function]}
        >
          Supprimer
        </a>
      </span>
      <span
        className="price order-summary__item-price"
      >
        <span
          className="price__units"
        >
          1
        </span>
        <span
          className="price__remaining"
        >
          , 
          00
           
          €
        </span>
      </span>
    </li>
  </ul>
  <div
    className="order-summary__separator"
  />
  <p
    className="order-summary__total"
  >
    <span
      className="order-summary__total-label"
    >
      Total de votre commande
    </span>
    <span
      className="price order-summary__total-price"
    >
      <span
        className="price__units"
      >
        114
      </span>
      <span
        className="price__remaining"
      >
        , 
        70
         
        €
      </span>
    </span>
  </p>
</section>
`;

exports[`Storyshots Payment / PaymentContainer main 1`] = `
<section
  className="payment-container"
>
  <div
    className="payment-container__left"
  >
    <section
      className="order-editor"
    >
      <section
        className="card card--has-border card--layer-raised order-summary"
      >
        <ul
          className="order-summary__details"
        >
          <li
            className="order-summary__item"
          >
            <span
              className="order-summary__item-label"
            >
              Vos billets
            </span>
            <span
              className="price order-summary__item-price"
            >
              <span
                className="price__units"
              >
                109
              </span>
              <span
                className="price__remaining"
              >
                , 
                80
                 
                €
              </span>
            </span>
          </li>
          <li
            className="order-summary__item"
          >
            <span
              className="order-summary__item-label"
            >
              Vos assurances
            </span>
            <span
              className="price order-summary__item-price"
            >
              <span
                className="price__units"
              >
                5
              </span>
              <span
                className="price__remaining"
              >
                , 
                90
                 
                €
              </span>
            </span>
          </li>
        </ul>
        <div
          className="order-summary__separator"
        />
        <p
          className="order-summary__total"
        >
          <span
            className="order-summary__total-label"
          >
            Total de votre commande
          </span>
          <span
            className="price order-summary__total-price"
          >
            <span
              className="price__units"
            >
              115
            </span>
            <span
              className="price__remaining"
            >
              , 
              70
               
              €
            </span>
          </span>
        </p>
      </section>
      <section
        className="card card--has-border card--layer-flat voucher-container order-editor__voucher-form"
      >
        <button
          className="flat-button voucher-container__question"
          onClick={[Function]}
        >
          Avez-vous un code promo ?
        </button>
      </section>
      <section
        className="card card--has-border card--layer-flat donation order-editor__donation"
      >
        <button
          className="flat-button donation__add-button"
          onClick={[Function]}
        >
          Voulez-vous ajouter un don ?
        </button>
      </section>
    </section>
  </div>
  <div
    className="payment-container__right"
  >
    <div
      className="wip"
    >
      <div
        className="wip__container"
      >
        <p
          style={
            Object {
              "height": "30rem",
            }
          }
        >
          Ici, il y aura le formulaire de paiement
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Payment / PaymentContainerConnected main 1`] = `
<section
  className="payment-container"
>
  <div
    className="payment-container__left"
  >
    <section
      className="order-editor"
    >
      <section
        className="card card--has-border card--layer-raised order-summary"
      >
        <p
          className="order-summary__total"
        >
          <span
            className="order-summary__total-label"
          >
            Total de votre commande
          </span>
          <span
            className="price order-summary__total-price"
          >
            <span
              className="price__units"
            >
              0
            </span>
            <span
              className="price__remaining"
            >
              , 
              00
               
              €
            </span>
          </span>
        </p>
      </section>
      <section
        className="card card--has-border card--layer-flat voucher-container order-editor__voucher-form"
      >
        <button
          className="flat-button voucher-container__question"
          onClick={[Function]}
        >
          Avez-vous un code promo ?
        </button>
      </section>
      <section
        className="card card--has-border card--layer-flat donation order-editor__donation"
      >
        <button
          className="flat-button donation__add-button"
          onClick={[Function]}
        >
          Voulez-vous ajouter un don ?
        </button>
      </section>
    </section>
  </div>
  <div
    className="payment-container__right"
  >
    <div
      className="wip"
    >
      <div
        className="wip__container"
      >
        <p
          style={
            Object {
              "height": "30rem",
            }
          }
        >
          Ici, il y aura le formulaire de paiement
        </p>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Payment / VoucherContainer main 1`] = `
<section
  className="card card--has-border card--layer-flat voucher-container "
>
  <button
    className="flat-button voucher-container__question"
    onClick={[Function]}
  >
    Avez-vous un code promo ?
  </button>
</section>
`;

exports[`Storyshots Payment / VoucherForm Défaut 1`] = `
<form
  className="voucher-form "
  onSubmit={[Function]}
>
  <div
    className="voucher-form__line"
  >
    <div
      className="form-field-container"
    >
      <label
        className="form-field-container__label"
        htmlFor="form-field-4"
      >
        Code promo
      </label>
      <div
        className="form-field-container__field"
      >
        <input
          autoComplete="off"
          className="form-input-field"
          disabled={false}
          id="form-field-4"
          maxLength={16}
          name="code"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    className="voucher-form__line"
  >
    <button
      className="button button--disabled button--size-small progress-button voucher-form__button"
      disabled={false}
      type="submit"
    >
      <div
        className="progress-button__content"
      >
        Ajouter le code promo
      </div>
      <div
        className="progress-button__progress-bar"
      />
    </button>
    <button
      className="button button--size-small voucher-form__button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Annuler
    </button>
  </div>
</form>
`;

exports[`Storyshots Payment / VoucherForm initial code 1`] = `
<form
  className="voucher-form "
  onSubmit={[Function]}
>
  <div
    className="voucher-form__line"
  >
    <div
      className="form-field-container"
    >
      <label
        className="form-field-container__label"
        htmlFor="form-field-5"
      >
        Code promo
      </label>
      <div
        className="form-field-container__field"
      >
        <input
          autoComplete="off"
          className="form-input-field"
          disabled={false}
          id="form-field-5"
          maxLength={16}
          name="code"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="EURO2016"
        />
      </div>
    </div>
  </div>
  <div
    className="voucher-form__line"
  >
    <button
      className="button button--size-small progress-button voucher-form__button"
      disabled={false}
      type="submit"
    >
      <div
        className="progress-button__content"
      >
        Ajouter le code promo
      </div>
      <div
        className="progress-button__progress-bar"
      />
    </button>
    <button
      className="button button--size-small voucher-form__button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Annuler
    </button>
  </div>
</form>
`;

exports[`Storyshots Payment / VoucherForm submit error 1`] = `
<form
  className="voucher-form "
  onSubmit={[Function]}
>
  <div
    className="voucher-form__line"
  >
    <div
      className="form-field-container"
    >
      <label
        className="form-field-container__label"
        htmlFor="form-field-7"
      >
        Code promo
      </label>
      <div
        className="form-field-container__field"
      >
        <input
          autoComplete="off"
          className="form-input-field"
          disabled={false}
          id="form-field-7"
          maxLength={16}
          name="code"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="CODE21"
        />
      </div>
    </div>
  </div>
  <div
    className="voucher-form__line"
  >
    <button
      className="button button--size-small progress-button voucher-form__button"
      disabled={false}
      type="submit"
    >
      <div
        className="progress-button__content"
      >
        Ajouter le code promo
      </div>
      <div
        className="progress-button__progress-bar"
      />
    </button>
    <button
      className="button button--size-small voucher-form__button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Annuler
    </button>
  </div>
</form>
`;

exports[`Storyshots Payment / VoucherForm submit success 1`] = `
<form
  className="voucher-form "
  onSubmit={[Function]}
>
  <div
    className="voucher-form__line"
  >
    <div
      className="form-field-container"
    >
      <label
        className="form-field-container__label"
        htmlFor="form-field-6"
      >
        Code promo
      </label>
      <div
        className="form-field-container__field"
      >
        <input
          autoComplete="off"
          className="form-input-field"
          disabled={false}
          id="form-field-6"
          maxLength={16}
          name="code"
          onBlur={[Function]}
          onChange={[Function]}
          type="text"
          value="CODE21"
        />
      </div>
    </div>
  </div>
  <div
    className="voucher-form__line"
  >
    <button
      className="button button--size-small progress-button voucher-form__button"
      disabled={false}
      type="submit"
    >
      <div
        className="progress-button__content"
      >
        Ajouter le code promo
      </div>
      <div
        className="progress-button__progress-bar"
      />
    </button>
    <button
      className="button button--size-small voucher-form__button"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Annuler
    </button>
  </div>
</form>
`;

exports[`Storyshots PaymentRequestComponent main 1`] = `
<button
  onClick={[Function]}
>
  Payer
</button>
`;

exports[`Storyshots Spinner main 1`] = `
<div
  className="spinner"
>
  <div
    className="spinner__bounce"
  />
  <div
    className="spinner__bounce"
  />
  <div
    className="spinner__bounce"
  />
</div>
`;

exports[`Storyshots SuperRadio example 1`] = `
Array [
  <div
    className="super-radio  "
  >
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
      onClick={[Function]}
    >
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <input
          checked={false}
          id="super-radio-3"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
        />
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <label
          htmlFor="super-radio-3"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-cc-visa fa-w-18 fa-3x "
            data-icon="cc-visa"
            data-prefix="fab"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M470.1 231.3s7.6 37.2 9.3 45H446c3.3-8.9 16-43.5 16-43.5-.2.3 3.3-9.1 5.3-14.9l2.8 13.4zM576 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h480c26.5 0 48 21.5 48 48zM152.5 331.2L215.7 176h-42.5l-39.3 106-4.3-21.5-14-71.4c-2.3-9.9-9.4-12.7-18.2-13.1H32.7l-.7 3.1c15.8 4 29.9 9.8 42.2 17.1l35.8 135h42.5zm94.4.2L272.1 176h-40.2l-25.1 155.4h40.1zm139.9-50.8c.2-17.7-10.6-31.2-33.7-42.3-14.1-7.1-22.7-11.9-22.7-19.2.2-6.6 7.3-13.4 23.1-13.4 13.1-.3 22.7 2.8 29.9 5.9l3.6 1.7 5.5-33.6c-7.9-3.1-20.5-6.6-36-6.6-39.7 0-67.6 21.2-67.8 51.4-.3 22.3 20 34.7 35.2 42.2 15.5 7.6 20.8 12.6 20.8 19.3-.2 10.4-12.6 15.2-24.1 15.2-16 0-24.6-2.5-37.7-8.3l-5.3-2.5-5.6 34.9c9.4 4.3 26.8 8.1 44.8 8.3 42.2.1 69.7-20.8 70-53zM528 331.4L495.6 176h-31.1c-9.6 0-16.9 2.8-21 12.9l-59.7 142.5H426s6.9-19.2 8.4-23.3H486c1.2 5.5 4.8 23.3 4.8 23.3H528z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </label>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          <label
            htmlFor="super-radio-3"
          >
            Visa
          </label>
        </p>
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          Payez avec Visa
        </p>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <a
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-question-circle fa-w-16 fa-1x super-radio__help-icon"
            data-icon="question-circle"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="super-radio__help-details "
    >
      <p>
        This is the fucking help !
      </p>
    </div>
  </div>,
  <div
    className="super-radio  "
  >
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
      onClick={[Function]}
    >
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <input
          checked={false}
          id="super-radio-4"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
        />
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <label
          htmlFor="super-radio-4"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-cc-mastercard fa-w-18 fa-3x "
            data-icon="cc-mastercard"
            data-prefix="fab"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M482.9 410.3c0 6.8-4.6 11.7-11.2 11.7-6.8 0-11.2-5.2-11.2-11.7 0-6.5 4.4-11.7 11.2-11.7 6.6 0 11.2 5.2 11.2 11.7zm-310.8-11.7c-7.1 0-11.2 5.2-11.2 11.7 0 6.5 4.1 11.7 11.2 11.7 6.5 0 10.9-4.9 10.9-11.7-.1-6.5-4.4-11.7-10.9-11.7zm117.5-.3c-5.4 0-8.7 3.5-9.5 8.7h19.1c-.9-5.7-4.4-8.7-9.6-8.7zm107.8.3c-6.8 0-10.9 5.2-10.9 11.7 0 6.5 4.1 11.7 10.9 11.7 6.8 0 11.2-4.9 11.2-11.7 0-6.5-4.4-11.7-11.2-11.7zm105.9 26.1c0 .3.3.5.3 1.1 0 .3-.3.5-.3 1.1-.3.3-.3.5-.5.8-.3.3-.5.5-1.1.5-.3.3-.5.3-1.1.3-.3 0-.5 0-1.1-.3-.3 0-.5-.3-.8-.5-.3-.3-.5-.5-.5-.8-.3-.5-.3-.8-.3-1.1 0-.5 0-.8.3-1.1 0-.5.3-.8.5-1.1.3-.3.5-.3.8-.5.5-.3.8-.3 1.1-.3.5 0 .8 0 1.1.3.5.3.8.3 1.1.5s.2.6.5 1.1zm-2.2 1.4c.5 0 .5-.3.8-.3.3-.3.3-.5.3-.8 0-.3 0-.5-.3-.8-.3 0-.5-.3-1.1-.3h-1.6v3.5h.8V426h.3l1.1 1.4h.8l-1.1-1.3zM576 81v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V81c0-26.5 21.5-48 48-48h480c26.5 0 48 21.5 48 48zM64 220.6c0 76.5 62.1 138.5 138.5 138.5 27.2 0 53.9-8.2 76.5-23.1-72.9-59.3-72.4-171.2 0-230.5-22.6-15-49.3-23.1-76.5-23.1-76.4-.1-138.5 62-138.5 138.2zm224 108.8c70.5-55 70.2-162.2 0-217.5-70.2 55.3-70.5 162.6 0 217.5zm-142.3 76.3c0-8.7-5.7-14.4-14.7-14.7-4.6 0-9.5 1.4-12.8 6.5-2.4-4.1-6.5-6.5-12.2-6.5-3.8 0-7.6 1.4-10.6 5.4V392h-8.2v36.7h8.2c0-18.9-2.5-30.2 9-30.2 10.2 0 8.2 10.2 8.2 30.2h7.9c0-18.3-2.5-30.2 9-30.2 10.2 0 8.2 10 8.2 30.2h8.2v-23zm44.9-13.7h-7.9v4.4c-2.7-3.3-6.5-5.4-11.7-5.4-10.3 0-18.2 8.2-18.2 19.3 0 11.2 7.9 19.3 18.2 19.3 5.2 0 9-1.9 11.7-5.4v4.6h7.9V392zm40.5 25.6c0-15-22.9-8.2-22.9-15.2 0-5.7 11.9-4.8 18.5-1.1l3.3-6.5c-9.4-6.1-30.2-6-30.2 8.2 0 14.3 22.9 8.3 22.9 15 0 6.3-13.5 5.8-20.7.8l-3.5 6.3c11.2 7.6 32.6 6 32.6-7.5zm35.4 9.3l-2.2-6.8c-3.8 2.1-12.2 4.4-12.2-4.1v-16.6h13.1V392h-13.1v-11.2h-8.2V392h-7.6v7.3h7.6V416c0 17.6 17.3 14.4 22.6 10.9zm13.3-13.4h27.5c0-16.2-7.4-22.6-17.4-22.6-10.6 0-18.2 7.9-18.2 19.3 0 20.5 22.6 23.9 33.8 14.2l-3.8-6c-7.8 6.4-19.6 5.8-21.9-4.9zm59.1-21.5c-4.6-2-11.6-1.8-15.2 4.4V392h-8.2v36.7h8.2V408c0-11.6 9.5-10.1 12.8-8.4l2.4-7.6zm10.6 18.3c0-11.4 11.6-15.1 20.7-8.4l3.8-6.5c-11.6-9.1-32.7-4.1-32.7 15 0 19.8 22.4 23.8 32.7 15l-3.8-6.5c-9.2 6.5-20.7 2.6-20.7-8.6zm66.7-18.3H408v4.4c-8.3-11-29.9-4.8-29.9 13.9 0 19.2 22.4 24.7 29.9 13.9v4.6h8.2V392zm33.7 0c-2.4-1.2-11-2.9-15.2 4.4V392h-7.9v36.7h7.9V408c0-11 9-10.3 12.8-8.4l2.4-7.6zm40.3-14.9h-7.9v19.3c-8.2-10.9-29.9-5.1-29.9 13.9 0 19.4 22.5 24.6 29.9 13.9v4.6h7.9v-51.7zm7.6-75.1v4.6h.8V302h1.9v-.8h-4.6v.8h1.9zm6.6 123.8c0-.5 0-1.1-.3-1.6-.3-.3-.5-.8-.8-1.1-.3-.3-.8-.5-1.1-.8-.5 0-1.1-.3-1.6-.3-.3 0-.8.3-1.4.3-.5.3-.8.5-1.1.8-.5.3-.8.8-.8 1.1-.3.5-.3 1.1-.3 1.6 0 .3 0 .8.3 1.4 0 .3.3.8.8 1.1.3.3.5.5 1.1.8.5.3 1.1.3 1.4.3.5 0 1.1 0 1.6-.3.3-.3.8-.5 1.1-.8.3-.3.5-.8.8-1.1.3-.6.3-1.1.3-1.4zm3.2-124.7h-1.4l-1.6 3.5-1.6-3.5h-1.4v5.4h.8v-4.1l1.6 3.5h1.1l1.4-3.5v4.1h1.1v-5.4zm4.4-80.5c0-76.2-62.1-138.3-138.5-138.3-27.2 0-53.9 8.2-76.5 23.1 72.1 59.3 73.2 171.5 0 230.5 22.6 15 49.5 23.1 76.5 23.1 76.4.1 138.5-61.9 138.5-138.4z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </label>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          <label
            htmlFor="super-radio-4"
          >
            Mastercard
          </label>
        </p>
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          Payez avec Mastercard
        </p>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <a
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-question-circle fa-w-16 fa-1x super-radio__help-icon"
            data-icon="question-circle"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="super-radio__help-details "
    >
      <p>
        This is the fucking help !
      </p>
    </div>
  </div>,
  <div
    className="super-radio  "
  >
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
      onClick={[Function]}
    >
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <input
          checked={false}
          id="super-radio-5"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
        />
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <label
          htmlFor="super-radio-5"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-cc-amex fa-w-18 fa-3x "
            data-icon="cc-amex"
            data-prefix="fab"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M576 255.4c-37.9-.2-44.2-.9-54.5 5v-5c-45.3 0-53.5-1.7-64.9 5.2v-5.2h-78.2v5.1c-11.4-6.5-21.4-5.1-75.7-5.1v5.6c-6.3-3.7-14.5-5.6-24.3-5.6h-58c-3.5 3.8-12.5 13.7-15.7 17.2-12.7-14.1-10.5-11.6-15.5-17.2h-83.1v92.3h82c3.3-3.5 12.9-13.9 16.1-17.4 12.7 14.3 10.3 11.7 15.4 17.4h48.9c0-14.7.1-8.3.1-23 11.5.2 24.3-.2 34.3-6.2 0 13.9-.1 17.1-.1 29.2h39.6c0-18.5.1-7.4.1-25.3 6.2 0 7.7 0 9.4.1.1 1.3 0 0 0 25.2 152.8 0 145.9 1.1 156.7-4.5v4.5c34.8 0 54.8 2.2 67.5-6.1V432c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V228.3h26.6c4.2-10.1 2.2-5.3 6.4-15.3h19.2c4.2 10 2.2 5.2 6.4 15.3h52.9v-11.4c2.2 5 1.1 2.5 5.1 11.4h29.5c2.4-5.5 2.6-5.8 5.1-11.4v11.4h135.5v-25.1c6.4 0 8-.1 9.8.2 0 0-.2 10.9.1 24.8h66.5v-8.9c7.4 5.9 17.4 8.9 29.7 8.9h26.8c4.2-10.1 2.2-5.3 6.4-15.3h19c6.5 15 .2.5 6.6 15.3h52.8v-21.9c11.8 19.7 7.8 12.9 13.2 21.9h41.6v-92h-39.9v18.4c-12.2-20.2-6.3-10.4-11.2-18.4h-43.3v20.6c-6.2-14.6-4.6-10.8-8.8-20.6h-32.4c-.4 0-2.3.2-2.3-.3h-27.6c-12.8 0-23.1 3.2-30.7 9.3v-9.3h-39.9v5.3c-10.8-6.1-20.7-5.1-64.4-5.3-.1 0-11.6-.1-11.6 0h-103c-2.5 6.1-6.8 16.4-12.6 30-2.8-6-11-23.8-13.9-30h-46V157c-7.4-17.4-4.7-11-9-21.1H22.9c-3.4 7.9-13.7 32-23.1 53.9V80c0-26.5 21.5-48 48-48h480c26.5 0 48 21.5 48 48v175.4zm-186.6-80.6c-.3.2-1.4 2.2-1.4 7.6 0 6 .9 7.7 1.1 7.9.2.1 1.1.5 3.4.5l7.3-16.9c-1.1 0-2.1-.1-3.1-.1-5.6 0-7 .7-7.3 1zm-19.9 130.9c9.2 3.3 11 9.5 11 18.4l-.1 13.8h-16.6l.1-11.5c0-11.8-3.8-13.8-14.8-13.8h-17.6l-.1 25.3h-16.6l.1-69.3h39.4c13 0 27.1 2.3 27.1 18.7-.1 7.6-4.2 15.3-11.9 18.4zm-6.3-15.4c0-6.4-5.6-7.4-10.7-7.4h-21v15.6h20.7c5.6 0 11-1.3 11-8.2zm181.7-7.1H575v-14.6h-32.9c-12.8 0-23.8 6.6-23.8 20.7 0 33 42.7 12.8 42.7 27.4 0 5.1-4.3 6.4-8.4 6.4h-32l-.1 14.8h32c8.4 0 17.6-1.8 22.5-8.9v-25.8c-10.5-13.8-39.3-1.3-39.3-13.5 0-5.8 4.6-6.5 9.2-6.5zm-99.2-.3v-14.3h-55.2l-.1 69.3h55.2l.1-14.3-38.6-.3v-13.8H445v-14.1h-37.8v-12.5h38.5zm42.2 40.1h-32.2l-.1 14.8h32.2c14.8 0 26.2-5.6 26.2-22 0-33.2-42.9-11.2-42.9-26.3 0-5.6 4.9-6.4 9.2-6.4h30.4v-14.6h-33.2c-12.8 0-23.5 6.6-23.5 20.7 0 33 42.7 12.5 42.7 27.4-.1 5.4-4.7 6.4-8.8 6.4zm-78.1-158.7c-17.4-.3-33.2-4.1-33.2 19.7 0 11.8 2.8 19.9 16.1 19.9h7.4l23.5-54.5h24.8l27.9 65.4v-65.4h25.3l29.1 48.1v-48.1h16.9v69H524l-31.2-51.9v51.9h-33.7l-6.6-15.3h-34.3l-6.4 15.3h-19.2c-22.8 0-33-11.8-33-34 0-23.3 10.5-35.3 34-35.3h16.1v15.2zm14.3 24.5h22.8l-11.2-27.6-11.6 27.6zm-72.6-39.6h-16.9v69.3h16.9v-69.3zm-38.1 37.3c9.5 3.3 11 9.2 11 18.4v13.5h-16.6c-.3-14.8 3.6-25.1-14.8-25.1h-18v25.1h-16.4v-69.3l39.1.3c13.3 0 27.4 2 27.4 18.4.1 8-4.3 15.7-11.7 18.7zm-6.7-15.3c0-6.4-5.6-7.4-10.7-7.4h-21v15.3h20.7c5.7 0 11-1.3 11-7.9zm-59.5-7.4v-14.6h-55.5v69.3h55.5v-14.3h-38.9v-13.8h37.8v-14.1h-37.8v-12.5h38.9zm-84.6 54.7v-54.2l-24 54.2H124l-24-54.2v54.2H66.2l-6.4-15.3H25.3l-6.4 15.3H1l29.7-69.3h24.5l28.1 65.7v-65.7h27.1l21.7 47 19.7-47h27.6v69.3h-16.8zM53.9 188.8l-11.5-27.6-11.2 27.6h22.7zm253 102.5c0 27.9-30.4 23.3-49.3 23.3l-.1 23.3h-32.2l-20.4-23-21.3 23h-65.4l.1-69.3h66.5l20.5 22.8 21-22.8H279c15.6 0 27.9 5.4 27.9 22.7zm-112.7 11.8l-17.9-20.2h-41.7v12.5h36.3v14.1h-36.3v13.8h40.6l19-20.2zM241 276l-25.3 27.4 25.3 28.1V276zm48.3 15.3c0-6.1-4.6-8.4-10.2-8.4h-21.5v17.6h21.2c5.9 0 10.5-2.8 10.5-9.2z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </label>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          <label
            htmlFor="super-radio-5"
          >
            American Express
          </label>
        </p>
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          Payez avec American Express
        </p>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <a
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-question-circle fa-w-16 fa-1x super-radio__help-icon"
            data-icon="question-circle"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="super-radio__help-details "
    >
      <p>
        This is the fucking help !
      </p>
    </div>
  </div>,
  <div
    className="super-radio  "
  >
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
      onClick={[Function]}
    >
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <input
          checked={false}
          id="super-radio-6"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
        />
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <label
          htmlFor="super-radio-6"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-cc-paypal fa-w-18 fa-3x "
            data-icon="cc-paypal"
            data-prefix="fab"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M186.3 258.2c0 12.2-9.7 21.5-22 21.5-9.2 0-16-5.2-16-15 0-12.2 9.5-22 21.7-22 9.3 0 16.3 5.7 16.3 15.5zM80.5 209.7h-4.7c-1.5 0-3 1-3.2 2.7l-4.3 26.7 8.2-.3c11 0 19.5-1.5 21.5-14.2 2.3-13.4-6.2-14.9-17.5-14.9zm284 0H360c-1.8 0-3 1-3.2 2.7l-4.2 26.7 8-.3c13 0 22-3 22-18-.1-10.6-9.6-11.1-18.1-11.1zM576 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h480c26.5 0 48 21.5 48 48zM128.3 215.4c0-21-16.2-28-34.7-28h-40c-2.5 0-5 2-5.2 4.7L32 294.2c-.3 2 1.2 4 3.2 4h19c2.7 0 5.2-2.9 5.5-5.7l4.5-26.6c1-7.2 13.2-4.7 18-4.7 28.6 0 46.1-17 46.1-45.8zm84.2 8.8h-19c-3.8 0-4 5.5-4.2 8.2-5.8-8.5-14.2-10-23.7-10-24.5 0-43.2 21.5-43.2 45.2 0 19.5 12.2 32.2 31.7 32.2 9 0 20.2-4.9 26.5-11.9-.5 1.5-1 4.7-1 6.2 0 2.3 1 4 3.2 4H200c2.7 0 5-2.9 5.5-5.7l10.2-64.3c.3-1.9-1.2-3.9-3.2-3.9zm40.5 97.9l63.7-92.6c.5-.5.5-1 .5-1.7 0-1.7-1.5-3.5-3.2-3.5h-19.2c-1.7 0-3.5 1-4.5 2.5l-26.5 39-11-37.5c-.8-2.2-3-4-5.5-4h-18.7c-1.7 0-3.2 1.8-3.2 3.5 0 1.2 19.5 56.8 21.2 62.1-2.7 3.8-20.5 28.6-20.5 31.6 0 1.8 1.5 3.2 3.2 3.2h19.2c1.8-.1 3.5-1.1 4.5-2.6zm159.3-106.7c0-21-16.2-28-34.7-28h-39.7c-2.7 0-5.2 2-5.5 4.7l-16.2 102c-.2 2 1.3 4 3.2 4h20.5c2 0 3.5-1.5 4-3.2l4.5-29c1-7.2 13.2-4.7 18-4.7 28.4 0 45.9-17 45.9-45.8zm84.2 8.8h-19c-3.8 0-4 5.5-4.3 8.2-5.5-8.5-14-10-23.7-10-24.5 0-43.2 21.5-43.2 45.2 0 19.5 12.2 32.2 31.7 32.2 9.3 0 20.5-4.9 26.5-11.9-.3 1.5-1 4.7-1 6.2 0 2.3 1 4 3.2 4H484c2.7 0 5-2.9 5.5-5.7l10.2-64.3c.3-1.9-1.2-3.9-3.2-3.9zm47.5-33.3c0-2-1.5-3.5-3.2-3.5h-18.5c-1.5 0-3 1.2-3.2 2.7l-16.2 104-.3.5c0 1.8 1.5 3.5 3.5 3.5h16.5c2.5 0 5-2.9 5.2-5.7L544 191.2v-.3zm-90 51.8c-12.2 0-21.7 9.7-21.7 22 0 9.7 7 15 16.2 15 12 0 21.7-9.2 21.7-21.5.1-9.8-6.9-15.5-16.2-15.5z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </label>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          <label
            htmlFor="super-radio-6"
          >
            Paypal
          </label>
        </p>
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          Payez avec Paypal
        </p>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <a
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-question-circle fa-w-16 fa-1x super-radio__help-icon"
            data-icon="question-circle"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="super-radio__help-details "
    >
      <p>
        This is the fucking help !
      </p>
    </div>
  </div>,
  <div
    className="super-radio  "
  >
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
      onClick={[Function]}
    >
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <input
          checked={false}
          id="super-radio-7"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
        />
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <label
          htmlFor="super-radio-7"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-cc-amazon-pay fa-w-18 fa-3x "
            data-icon="cc-amazon-pay"
            data-prefix="fab"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M124.7 201.8c.1-11.8 0-23.5 0-35.3v-35.3c0-1.3.4-2 1.4-2.7 11.5-8 24.1-12.1 38.2-11.1 12.5.9 22.7 7 28.1 21.7 3.3 8.9 4.1 18.2 4.1 27.7 0 8.7-.7 17.3-3.4 25.6-5.7 17.8-18.7 24.7-35.7 23.9-11.7-.5-21.9-5-31.4-11.7-.9-.8-1.4-1.6-1.3-2.8zm154.9 14.6c4.6 1.8 9.3 2 14.1 1.5 11.6-1.2 21.9-5.7 31.3-12.5.9-.6 1.3-1.3 1.3-2.5-.1-3.9 0-7.9 0-11.8 0-4-.1-8 0-12 0-1.4-.4-2-1.8-2.2-7-.9-13.9-2.2-20.9-2.9-7-.6-14-.3-20.8 1.9-6.7 2.2-11.7 6.2-13.7 13.1-1.6 5.4-1.6 10.8.1 16.2 1.6 5.5 5.2 9.2 10.4 11.2zM576 80v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V80c0-26.5 21.5-48 48-48h480c26.5 0 48 21.5 48 48zm-207.5 23.9c.4 1.7.9 3.4 1.6 5.1 16.5 40.6 32.9 81.3 49.5 121.9 1.4 3.5 1.7 6.4.2 9.9-2.8 6.2-4.9 12.6-7.8 18.7-2.6 5.5-6.7 9.5-12.7 11.2-4.2 1.1-8.5 1.3-12.9.9-2.1-.2-4.2-.7-6.3-.8-2.8-.2-4.2 1.1-4.3 4-.1 2.8-.1 5.6 0 8.3.1 4.6 1.6 6.7 6.2 7.5 4.7.8 9.4 1.6 14.2 1.7 14.3.3 25.7-5.4 33.1-17.9 2.9-4.9 5.6-10.1 7.7-15.4 19.8-50.1 39.5-100.3 59.2-150.5.6-1.5 1.1-3 1.3-4.6.4-2.4-.7-3.6-3.1-3.7-5.6-.1-11.1 0-16.7 0-3.1 0-5.3 1.4-6.4 4.3-.4 1.1-.9 2.3-1.3 3.4l-29.1 83.7c-2.1 6.1-4.2 12.1-6.5 18.6-.4-.9-.6-1.4-.8-1.9-10.8-29.9-21.6-59.9-32.4-89.8-1.7-4.7-3.5-9.5-5.3-14.2-.9-2.5-2.7-4-5.4-4-6.4-.1-12.8-.2-19.2-.1-2.2 0-3.3 1.6-2.8 3.7zM242.4 206c1.7 11.7 7.6 20.8 18 26.6 9.9 5.5 20.7 6.2 31.7 4.6 12.7-1.9 23.9-7.3 33.8-15.5.4-.3.8-.6 1.4-1 .5 3.2.9 6.2 1.5 9.2.5 2.6 2.1 4.3 4.5 4.4 4.6.1 9.1.1 13.7 0 2.3-.1 3.8-1.6 4-3.9.1-.8.1-1.6.1-2.3v-88.8c0-3.6-.2-7.2-.7-10.8-1.6-10.8-6.2-19.7-15.9-25.4-5.6-3.3-11.8-5-18.2-5.9-3-.4-6-.7-9.1-1.1h-10c-.8.1-1.6.3-2.5.3-8.2.4-16.3 1.4-24.2 3.5-5.1 1.3-10 3.2-15 4.9-3 1-4.5 3.2-4.4 6.5.1 2.8-.1 5.6 0 8.3.1 4.1 1.8 5.2 5.7 4.1 6.5-1.7 13.1-3.5 19.7-4.8 10.3-1.9 20.7-2.7 31.1-1.2 5.4.8 10.5 2.4 14.1 7 3.1 4 4.2 8.8 4.4 13.7.3 6.9.2 13.9.3 20.8 0 .4-.1.7-.2 1.2-.4 0-.8 0-1.1-.1-8.8-2.1-17.7-3.6-26.8-4.1-9.5-.5-18.9.1-27.9 3.2-10.8 3.8-19.5 10.3-24.6 20.8-4.1 8.3-4.6 17-3.4 25.8zM98.7 106.9v175.3c0 .8 0 1.7.1 2.5.2 2.5 1.7 4.1 4.1 4.2 5.9.1 11.8.1 17.7 0 2.5 0 4-1.7 4.1-4.1.1-.8.1-1.7.1-2.5v-60.7c.9.7 1.4 1.2 1.9 1.6 15 12.5 32.2 16.6 51.1 12.9 17.1-3.4 28.9-13.9 36.7-29.2 5.8-11.6 8.3-24.1 8.7-37 .5-14.3-1-28.4-6.8-41.7-7.1-16.4-18.9-27.3-36.7-30.9-2.7-.6-5.5-.8-8.2-1.2h-7c-1.2.2-2.4.3-3.6.5-11.7 1.4-22.3 5.8-31.8 12.7-2 1.4-3.9 3-5.9 4.5-.1-.5-.3-.8-.4-1.2-.4-2.3-.7-4.6-1.1-6.9-.6-3.9-2.5-5.5-6.4-5.6h-9.7c-5.9-.1-6.9 1-6.9 6.8zM493.6 339c-2.7-.7-5.1 0-7.6 1-43.9 18.4-89.5 30.2-136.8 35.8-14.5 1.7-29.1 2.8-43.7 3.2-26.6.7-53.2-.8-79.6-4.3-17.8-2.4-35.5-5.7-53-9.9-37-8.9-72.7-21.7-106.7-38.8-8.8-4.4-17.4-9.3-26.1-14-3.8-2.1-6.2-1.5-8.2 2.1v1.7c1.2 1.6 2.2 3.4 3.7 4.8 36 32.2 76.6 56.5 122 72.9 21.9 7.9 44.4 13.7 67.3 17.5 14 2.3 28 3.8 42.2 4.5 3 .1 6 .2 9 .4.7 0 1.4.2 2.1.3h17.7c.7-.1 1.4-.3 2.1-.3 14.9-.4 29.8-1.8 44.6-4 21.4-3.2 42.4-8.1 62.9-14.7 29.6-9.6 57.7-22.4 83.4-40.1 2.8-1.9 5.7-3.8 8-6.2 4.3-4.4 2.3-10.4-3.3-11.9zm50.4-27.7c-.8-4.2-4-5.8-7.6-7-5.7-1.9-11.6-2.8-17.6-3.3-11-.9-22-.4-32.8 1.6-12 2.2-23.4 6.1-33.5 13.1-1.2.8-2.4 1.8-3.1 3-.6.9-.7 2.3-.5 3.4.3 1.3 1.7 1.6 3 1.5.6 0 1.2 0 1.8-.1l19.5-2.1c9.6-.9 19.2-1.5 28.8-.8 4.1.3 8.1 1.2 12 2.2 4.3 1.1 6.2 4.4 6.4 8.7.3 6.7-1.2 13.1-2.9 19.5-3.5 12.9-8.3 25.4-13.3 37.8-.3.8-.7 1.7-.8 2.5-.4 2.5 1 4 3.4 3.5 1.4-.3 3-1.1 4-2.1 3.7-3.6 7.5-7.2 10.6-11.2 10.7-13.8 17-29.6 20.7-46.6.7-3 1.2-6.1 1.7-9.1.2-4.7.2-9.6.2-14.5z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </label>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          <label
            htmlFor="super-radio-7"
          >
            Amazon Pay
          </label>
        </p>
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          Payez avec Amazon Pay
        </p>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <a
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-question-circle fa-w-16 fa-1x super-radio__help-icon"
            data-icon="question-circle"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="super-radio__help-details "
    >
      <p>
        This is the fucking help !
      </p>
    </div>
  </div>,
  <div
    className="super-radio  "
  >
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
      onClick={[Function]}
    >
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <input
          checked={false}
          id="super-radio-8"
          onChange={[Function]}
          onClick={[Function]}
          type="radio"
        />
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <label
          htmlFor="super-radio-8"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-cc-apple-pay fa-w-18 fa-3x "
            data-icon="cc-apple-pay"
            data-prefix="fab"
            role="img"
            style={Object {}}
            viewBox="0 0 576 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M302.2 218.4c0 17.2-10.5 27.1-29 27.1h-24.3v-54.2h24.4c18.4 0 28.9 9.8 28.9 27.1zm47.5 62.6c0 8.3 7.2 13.7 18.5 13.7 14.4 0 25.2-9.1 25.2-21.9v-7.7l-23.5 1.5c-13.3.9-20.2 5.8-20.2 14.4zM576 79v352c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V79c0-26.5 21.5-48 48-48h480c26.5 0 48 21.5 48 48zM127.8 197.2c8.4.7 16.8-4.2 22.1-10.4 5.2-6.4 8.6-15 7.7-23.7-7.4.3-16.6 4.9-21.9 11.3-4.8 5.5-8.9 14.4-7.9 22.8zm60.6 74.5c-.2-.2-19.6-7.6-19.8-30-.2-18.7 15.3-27.7 16-28.2-8.8-13-22.4-14.4-27.1-14.7-12.2-.7-22.6 6.9-28.4 6.9-5.9 0-14.7-6.6-24.3-6.4-12.5.2-24.2 7.3-30.5 18.6-13.1 22.6-3.4 56 9.3 74.4 6.2 9.1 13.7 19.1 23.5 18.7 9.3-.4 13-6 24.2-6 11.3 0 14.5 6 24.3 5.9 10.2-.2 16.5-9.1 22.8-18.2 6.9-10.4 9.8-20.4 10-21zm135.4-53.4c0-26.6-18.5-44.8-44.9-44.8h-51.2v136.4h21.2v-46.6h29.3c26.8 0 45.6-18.4 45.6-45zm90 23.7c0-19.7-15.8-32.4-40-32.4-22.5 0-39.1 12.9-39.7 30.5h19.1c1.6-8.4 9.4-13.9 20-13.9 13 0 20.2 6 20.2 17.2v7.5l-26.4 1.6c-24.6 1.5-37.9 11.6-37.9 29.1 0 17.7 13.7 29.4 33.4 29.4 13.3 0 25.6-6.7 31.2-17.4h.4V310h19.6v-68zM516 210.9h-21.5l-24.9 80.6h-.4l-24.9-80.6H422l35.9 99.3-1.9 6c-3.2 10.2-8.5 14.2-17.9 14.2-1.7 0-4.9-.2-6.2-.3v16.4c1.2.4 6.5.5 8.1.5 20.7 0 30.4-7.9 38.9-31.8L516 210.9z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </label>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          <label
            htmlFor="super-radio-8"
          >
            Apple Pay
          </label>
        </p>
        <p
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
        >
          Payez avec Apple Pay
        </p>
      </div>
      <div
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <a
          className={
            Object {
              "modifier": [Function],
              "toString": [Function],
            }
          }
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-question-circle fa-w-16 fa-1x super-radio__help-icon"
            data-icon="question-circle"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      className="super-radio__help-details "
    >
      <p>
        This is the fucking help !
      </p>
    </div>
  </div>,
]
`;

exports[`Storyshots SuperRadio main 1`] = `
<div
  className="super-radio  "
>
  <div
    className={
      Object {
        "modifier": [Function],
        "toString": [Function],
      }
    }
    onClick={[Function]}
  >
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
    >
      <input
        checked={false}
        id="super-radio-1"
        onChange={[Function]}
        onClick={[Function]}
        type="radio"
      />
    </div>
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
    >
      <label
        htmlFor="super-radio-1"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-coffee fa-w-20 fa-3x "
          data-icon="coffee"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </label>
    </div>
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
    >
      <p
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <label
          htmlFor="super-radio-1"
        >
          Radio button
        </label>
      </p>
      <p
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        This is my radio button
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots SuperRadio without icon 1`] = `
<div
  className="super-radio  "
>
  <div
    className={
      Object {
        "modifier": [Function],
        "toString": [Function],
      }
    }
    onClick={[Function]}
  >
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
    >
      <input
        id="super-radio-2"
        onClick={[Function]}
        type="radio"
      />
    </div>
    <div
      className={
        Object {
          "modifier": [Function],
          "toString": [Function],
        }
      }
    >
      <p
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        <label
          htmlFor="super-radio-2"
        >
          Radio button
        </label>
      </p>
      <p
        className={
          Object {
            "modifier": [Function],
            "toString": [Function],
          }
        }
      >
        This is my radio button
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Travel Aller simple 1`] = `
<section
  className="travel"
>
  <div
    className="travel__header"
  >
    <h1
      className="travel__header-title"
    >
      Lille ➝ Nantes
    </h1>
    <p
      className="price travel__header-price"
    >
      <span
        className="price__units"
      >
        105
      </span>
      <span
        className="price__remaining"
      >
        , 
        60
         
        €
      </span>
    </p>
  </div>
  <div
    className="travel__details"
  >
    <h2
      className="travel__details-date"
    >
      Départ le 
      <b>
        12/09/2018 à 10h35
      </b>
    </h2>
    <p
      className="travel__details-passengers"
    >
      1
       
      passager
    </p>
  </div>
</section>
`;

exports[`Storyshots Travel Aller-retour 1`] = `
<section
  className="travel"
>
  <div
    className="travel__header"
  >
    <h1
      className="travel__header-title"
    >
      Lille ⇄ Nantes
    </h1>
    <p
      className="price travel__header-price"
    >
      <span
        className="price__units"
      >
        105
      </span>
      <span
        className="price__remaining"
      >
        , 
        60
         
        €
      </span>
    </p>
  </div>
  <div
    className="travel__details"
  >
    <h2
      className="travel__details-date"
    >
      Aller le 
      <b>
        12/09/2018 à 10h35
      </b>
    </h2>
    <h2
      className="travel__details-date"
    >
      Retour le 
      <b>
        14/09/2018 à 18h12
      </b>
    </h2>
    <p
      className="travel__details-passengers"
    >
      2
       
      passagers
    </p>
  </div>
</section>
`;

exports[`Storyshots Travel Aller-retour asymétrique 1`] = `
<section
  className="travel"
>
  <div
    className="travel__header"
  >
    <h1
      className="travel__header-title travel__header-title--asymetrical-roundtrip"
    >
      Lille ➝ Nantes
       ● Nantes ➝ Paris
    </h1>
    <p
      className="price travel__header-price"
    >
      <span
        className="price__units"
      >
        105
      </span>
      <span
        className="price__remaining"
      >
        , 
        60
         
        €
      </span>
    </p>
  </div>
  <div
    className="travel__details"
  >
    <h2
      className="travel__details-date"
    >
      Aller le 
      <b>
        12/09/2018 à 10h35
      </b>
    </h2>
    <h2
      className="travel__details-date"
    >
      Retour le 
      <b>
        18/09/2018 à 18h12
      </b>
    </h2>
    <p
      className="travel__details-passengers"
    >
      1
       
      passager
    </p>
  </div>
</section>
`;

exports[`Storyshots Travel Multiples trajets 1`] = `
Array [
  <div
    style={
      Object {
        "margin": "0.3rem",
      }
    }
  >
    <section
      className="travel"
    >
      <div
        className="travel__header"
      >
        <h1
          className="travel__header-title"
        >
          Lille ➝ Nantes
        </h1>
        <p
          className="price travel__header-price"
        >
          <span
            className="price__units"
          >
            105
          </span>
          <span
            className="price__remaining"
          >
            , 
            60
             
            €
          </span>
        </p>
      </div>
      <div
        className="travel__details"
      >
        <h2
          className="travel__details-date"
        >
          Départ le 
          <b>
            12/09/2018 à 10h35
          </b>
        </h2>
        <p
          className="travel__details-passengers"
        >
          1
           
          passager
        </p>
      </div>
    </section>
  </div>,
  <div
    style={
      Object {
        "margin": "0.3rem",
      }
    }
  >
    <section
      className="travel"
    >
      <div
        className="travel__header"
      >
        <h1
          className="travel__header-title"
        >
          Lille ⇄ Nantes
        </h1>
        <p
          className="price travel__header-price"
        >
          <span
            className="price__units"
          >
            105
          </span>
          <span
            className="price__remaining"
          >
            , 
            60
             
            €
          </span>
        </p>
      </div>
      <div
        className="travel__details"
      >
        <h2
          className="travel__details-date"
        >
          Aller le 
          <b>
            12/09/2018 à 10h35
          </b>
        </h2>
        <h2
          className="travel__details-date"
        >
          Retour le 
          <b>
            14/09/2018 à 18h12
          </b>
        </h2>
        <p
          className="travel__details-passengers"
        >
          2
           
          passagers
        </p>
      </div>
    </section>
  </div>,
  <div
    style={
      Object {
        "margin": "0.3rem",
      }
    }
  >
    <section
      className="travel"
    >
      <div
        className="travel__header"
      >
        <h1
          className="travel__header-title travel__header-title--asymetrical-roundtrip"
        >
          Lille ➝ Nantes
           ● Nantes ➝ Paris
        </h1>
        <p
          className="price travel__header-price"
        >
          <span
            className="price__units"
          >
            98
          </span>
          <span
            className="price__remaining"
          >
            , 
            50
             
            £
          </span>
        </p>
      </div>
      <div
        className="travel__details"
      >
        <h2
          className="travel__details-date"
        >
          Aller le 
          <b>
            12/09/2018 à 10h35
          </b>
        </h2>
        <h2
          className="travel__details-date"
        >
          Retour le 
          <b>
            18/09/2018 à 18h12
          </b>
        </h2>
        <p
          className="travel__details-passengers"
        >
          1
           
          passager
        </p>
      </div>
    </section>
  </div>,
]
`;

exports[`Storyshots Wip main 1`] = `
<div
  className="wip"
>
  <div
    className="wip__container"
  >
    Work in progress
  </div>
</div>
`;
